src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>fxProfitShareAmountAtProjection__c</fullName>
        <formula>(ProfitShareAmountAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Profit Share Amount At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProfitShareAmountAtSellout__c</fullName>
        <formula>(ProfitShareAmountAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Profit Share Amount At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProfitShareAmtAtProjFC__c</fullName>
        <formula>(ProfitShareAmtAtProjFC__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Profit Share Amt At Proj FC (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProfitShareAmtAtSellFC__c</fullName>
        <formula>(ProfitShareAmtAtSellFC__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Profit Share Amt At Sell FC (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedArtistBackendCalculation__c</fullName>
        <formula>(ProjectedArtistBackendCalculation__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Artist Backend Calc (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedArtistEarnings__c</fullName>
        <formula>(ProjectedArtistEarnings__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Artist Earnings (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedArtistWalkout__c</fullName>
        <formula>(ProjectedArtistWalkout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Artist Walkout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedBackend__c</fullName>
        <formula>(ProjectedBackend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Backend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedBonusGuarantee__c</fullName>
        <formula>(ProjectedBonusGuarantee__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Bonus - Guarantee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedBonus__c</fullName>
        <formula>(ProjectedBonus__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Bonus (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedOverage__c</fullName>
        <formula>(ProjectedOverage__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Overage (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedToBeSharedAmount__c</fullName>
        <formula>(ProjectedToBeSharedAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected To Be Shared Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpAncillaryShareAmtAtProj__c</fullName>
        <formula>(RollUpAncillaryShareAmtAtProj__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll Up Ancil. Share Amt At Proj (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpAncillaryShareAmtAtSell__c</fullName>
        <formula>(RollUpAncillaryShareAmtAtSell__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll Up Ancil. Share Amt At Sell (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpExpenseAdjustmentAtProjection__c</fullName>
        <formula>(RollUpExpenseAdjustmentAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll Up Exp Adj At Projection (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpExpenseAdjustmentAtSellout__c</fullName>
        <formula>(RollUpExpenseAdjustmentAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll Up Exp. Adj At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpPriCoProAncilShareAtProj__c</fullName>
        <formula>(RollUpPriCoProAncilShareAtProj__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll Up Pri Co-Pro Ancil At Proj (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpPriCoProAncilShareAtSell__c</fullName>
        <formula>(RollUpPriCoProAncilShareAtSell__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>RollUp Pri Co-Pro Ancil Share Sell (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpPriCoProExpenseShareAtProj__c</fullName>
        <formula>(RollUpPriCoProExpenseShareAtProj__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>RollUp Pri Co-Pro Exp Shar At Proj (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpPriCoProExpenseShareAtSell__c</fullName>
        <formula>(RollUpPriCoProExpenseShareAtSell__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Rollup Pri CoPro Exp At Sell (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRollUpTalentOverheadAmount__c</fullName>
        <formula>(RollUpTalentOverheadAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Roll-Up Talent Overhead Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementArtistBackendCalculation__c</fullName>
        <formula>(SettlementArtistBackendCalculation__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Artist Backend Calc. (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementArtistEarnings__c</fullName>
        <formula>(SettlementArtistEarnings__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Artist Earnings (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementArtistWalkout__c</fullName>
        <formula>(SettlementArtistWalkout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Artist Walkout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementBackend__c</fullName>
        <formula>(SettlementBackend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Backend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementBonusGuarantee__c</fullName>
        <formula>(SettlementBonusGuarantee__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Bonus - Guarantee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementBonus__c</fullName>
        <formula>(SettlementBonus__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Bonus (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSettlementInclTotalSupportExpenses__c</fullName>
        <formula>(SettlementInclTotalSupportExpenses__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Settlement Incl Total Support Exp (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSupportActShare__c</fullName>
        <formula>(SupportActShare__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Support Act Share (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalGuaranteesandOverhead__c</fullName>
        <formula>(TotalGuaranteesandOverhead__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Guarantees &amp; Overhead (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Dea-{000000}</displayFormat>
        <label>Deal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <recordTypes>
        <fullName>Artist</fullName>
        <active>true</active>
        <label>Artist</label>
    </recordTypes>
    <recordTypes>
        <fullName>CoPromoter</fullName>
        <active>true</active>
        <label>Co-Promoter</label>
    </recordTypes>
    <recordTypes>
        <fullName>InternalCoPromoter</fullName>
        <active>true</active>
        <description>Limited record type to support visibility to co-promoter profit sharing</description>
        <label>Internal Co-Promoter</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LNE_BackEndPercent</fullName>
        <active>true</active>
        <description>BackEnd % required if Deal Type is Alternative Promoter Profit Deal, Gross Split Point, Percentage of Gross, Percentage of Net or Promoter Profit</description>
        <errorConditionFormula>OR(
ISPICKVAL(DealType__c, &quot;Alternative Promoter Profit Deal&quot;),
ISPICKVAL(DealType__c, &quot;Gross Split Point&quot;),
ISPICKVAL(DealType__c, &quot;Percentage of Gross&quot;),
ISPICKVAL(DealType__c, &quot;Percentage of Net&quot;),
ISPICKVAL(DealType__c, &quot;Promoter Profit&quot;)) &amp;&amp; ISBLANK(BackendPercent__c) &amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>BackendPercent__c</errorDisplayField>
        <errorMessage>BackEnd % required if Deal Type is Alternative Promoter Profit Deal, Gross Split Point, Percentage of Gross, Percentage of Net or Promoter Profit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;,
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;)
&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_OneRetroStepUpMustStartWithZero</fullName>
        <active>true</active>
        <description>At least one retro/step up child record must start with zero</description>
        <errorConditionFormula>RetroStepUpStartAtZero__c  = false</errorConditionFormula>
        <errorMessage>At least one of the Artist Retro/Step Up detail records for this Deal must have a starting range of zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_OtherTalentDescription</fullName>
        <active>true</active>
        <description>Other Talent Description required if Other Talent Amount &gt; 0</description>
        <errorConditionFormula>ISBLANK(OtherTalentDescription__c) &amp;&amp;  OtherTalentAmount__c &gt; 0 &amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>OtherTalentDescription__c</errorDisplayField>
        <errorMessage>Other Talent Description required if Other Talent Amount &gt; 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_PrimaryHeadlinerArtist</fullName>
        <active>true</active>
        <description>If &apos;Duplicate Primary Headliner Artist?&apos; is checked, then user can&apos;t save the deal record.</description>
        <errorConditionFormula>DuplicatePrimaryHeadlinerArtist__c = TRUE &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorMessage>You can only select one Primary Headliner per Event.</errorMessage>
    </validationRules>
</CustomObject>